--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header {
     background-size: cover;
     background-position: center;
     overflow: hidden;
+    position: relative;
 }
 
 /* navbar */
@@ -137,4 +138,220 @@ nav {
 
 .btn-hover:hover {
     background-color: rgb(255, 101, 153);
+}
+
+
+
+
+/* login page */
+.login-page {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.564);
+    position: absolute;
+    /* display: none; */
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s linear;
+}
+
+
+/* login container */
+.login_container {
+    width: 600px;
+    height: 550px;
+    position: relative;
+    background: rgba(255, 255, 255, 0.129);
+    backdrop-filter: blur(5px);
+    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.241);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden;
+    border-radius: 10px;
+    /* position: relative; */
+}
+
+/* end */
+
+
+
+/* content */
+.content {
+    width: 300px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.content h1 {
+    color: #ffffff;
+    font-size: 42px;
+}
+
+/* end */
+
+
+/* inputs */
+.inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+.input-container {
+    position: relative;
+    display: flex;
+    width: 100%;
+    max-width: 290px;
+}
+
+.input-container>span,
+.input-container .input {
+    white-space: nowrap;
+    display: block;
+}
+
+.input-container>span,
+.input-container .input:first-child {
+    border-radius: 6px 0 0 6px;
+}
+
+.input-container>span,
+.input-container .input {
+    border-radius: 0 6px 6px 0;
+}
+
+.input-container>span,
+.input-container .input {
+    margin-left: -1px;
+}
+
+.input-container .input {
+    position: relative;
+    z-index: 1;
+    flex: 1 1 auto;
+    width: 1%;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.input-container span {
+    text-align: center;
+    padding: 8px 12px;
+    font-size: 14px;
+    line-height: 25px;
+    color: #ffffff;
+    background: pink;
+    border: 1px solid palevioletred;
+    font-weight: bold;
+    transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
+}
+
+.input-container:focus-within>span {
+    color: #ffffff;
+    background-color: palevioletred;
+    border-color: pink;
+}
+
+.input {
+    display: block;
+    width: 100%;
+    padding: 8px 16px;
+    line-height: 25px;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: inherit;
+    border-radius: 6px;
+    -webkit-appearance: none;
+    color: #99A3BA;
+    border: 1px solid #CDD9ED;
+    background: #fff;
+    transition: border 0.3s ease;
+}
+
+.input:focus {
+    outline: none;
+    border-color: pink;
+}
+
+/* end */
+
+
+
+/* forgot */
+.forgot a {
+    font-size: 15px;
+    text-decoration: none;
+    color: #ffffff;
+    transition: 0.10s;
+}
+
+.forgot a:hover {
+    text-decoration: underline;
+    color: palevioletred;
+}
+
+/* end */
+
+
+
+/* btn */
+.btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+.btn button {
+    padding: 15px 60px;
+    border: none;
+    border-radius: 8px;
+    font-size: 15px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.30s;
+    color: #6b7385;
+    background-color: #fff;
+}
+
+.btn button:hover {
+    background-color: pink;
+    box-shadow: 1px 1px 4px #6b7385;
+    color: #ffffff;
+}
+
+.btn span {
+    color: #ffffff;
+    font-size: 15px;
+}
+
+.btn span a {
+    font-size: 15px;
+    text-decoration: none;
+    color: #ffffff;
+    transition: all 0.10s;
+}
+
+.btn span a:hover {
+    text-decoration: underline;
+    color: palevioletred;
+}
+
+/* end */
+
+/* cut-bar */
+.cut-bar {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 1.5rem;
+    color: #ffffff;
 }
